infra/k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client      # match deployment label for frontend
  ports:
    - protocol: TCP
      port: 3000        # expose on 3000 so ingress can route there
      targetPort: 5005  # container listens on 5005 (nginx)
