infra/k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
