infra/k8s/event-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-srv
spec:
  type: ClusterIP
  selector:
    app: event          # event bus is internal
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
