infra/k8s/moderation-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  selector:
    app: moderation    # internal moderation service
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
