infra/k8s/query-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
