infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blog.local
      secretName: blog-tls
  rules:
    - host: blog.local
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 3001

          - path: /posts/[0-9]+/comments
            pathType: ImplementationSpecific
            backend:
              service:
                name: comments-srv
                port:
                  number: 3002

          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 3004

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 5006

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
